Fix CORS preflight filter